# pmm

./: .gitignore  CLI.md  CMakeCM.md  Conan.md  README.md  VCPKG.md  _coverpage.md  _navbar.md  index.html  latest-info.cmake  offline.js  pmm.cmake
.github/workflows/: main.yml
1.4.2/: conan.cmake
1.4.3/: conan.cmake
1.5.0/: conan.cmake
1.6.0/: conan.cmake  vcpkg.cmake
1.7.0/: main.cmake  python.cmake
1.7.1/: cmcm.cmake  conan.cmake
1.7.2/: conan.cmake
pmm/: cmcm.cmake  conan.cmake  entry.cmake  main.cmake  util.cmake  vcpkg.cmake
tests/: CMakeLists.txt
tests/cmcm/: CMakeLists.txt
tests/conan/: CMakeLists.txt  conanfile.txt  main.cpp
tests/pmm-cli/: CMakeLists.txt
tests/vcpkg/: CMakeLists.txt
